<resources>
    <string name="app_name">SVU</string>
    <string name="prompt_username">User Name</string>
    <string name="prompt_first_name">First Name</string>
    <string name="first_nameError">Please Enter Your First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="last_nameError">Please Enter Your Last Name</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="phoneError">Please Enter Your Phone Number</string>
    <string name="prompt_address">Address</string>
    <string name="addressError">Please Enter Your Address</string>
    <string name="add_student">Add Student</string>
    <string name="save_changes">Save Changes</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_gender">Gender</string>
    <string name="login">Login</string>
    <string name="sign_up">SignUp</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="name_error">Please enter your name</string>
    <string name="username_error">Please enter your username</string>
    <string name="error_invalid_username">This username address is invalid</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>


    <string name="student_name">Student Name: </string>

    <string name="student_details">Details</string>

    <string name="section_name">Section Name</string>
    <string name="prompt_section_number">Section Number</string>
    <string name="prompt_section_room">Section Room</string>
    <string name="prompt_time">Time</string>
    <string name="add_section">Add Section</string>
    <string name="enrollment_this_course">Enrollment this course</string>
    <string name="prompt_section_course">Please select a course</string>
    <string name="prompt_section_instructor">Please select an instructor</string>


    <string name="course_name">Course Name:</string>
    <string name="course_title">Course Title</string>
    <string name="course_hours">Hours</string>
    <string name="add_course">Add Course</string>
    <string name="prompt_course">Course</string>


    <string name="instructor_name">Instructor Name: </string>
    <string name="add_instructor">Add Instructor</string>

    <string name="enrollment_grade">Grade: </string>


    <string name="prompt_delete">Delete</string>
    <string name="prompt_edit">Edit</string>
    <string name="prompt_add_co_in">Add course and instructor</string>


    <string name="menu_home">Section</string>
    <string name="menu_gallery">Student</string>
    <string name="menu_slideshow">Course</string>
    <string name="menu_dr">Instructor</string>
    <string name="menu_enrollment">Enrollment</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>


</resources>