<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_section">

    <fragment
        android:id="@+id/nav_section"
        android:name="com.example.baitiwb303_hw_f20_c.activity.ui.section.SectionFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_section" />

    <fragment
        android:id="@+id/nav_student"
        android:name="com.example.baitiwb303_hw_f20_c.activity.ui.student.StudentFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_student" />

    <fragment
        android:id="@+id/nav_course"
        android:name="com.example.baitiwb303_hw_f20_c.activity.ui.course.CourseFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_course" />

    <fragment
        android:id="@+id/nav_dr"
        android:name="com.example.baitiwb303_hw_f20_c.activity.ui.dr.DrFragment"
        android:label="@string/menu_dr"
        tools:layout="@layout/fragment_dr" />
</navigation>