<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ui.dr.InstructorDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="14dp">
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/prompt_first_name"/>
            <TextView
                android:id="@+id/details_instructor_firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_weight="0.7"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="14dp">
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/prompt_last_name"/>
            <TextView
                android:id="@+id/details_instructor_lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_weight="0.7"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="14dp">
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/prompt_phone"/>
            <TextView
                android:id="@+id/details_instructor_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_weight="0.7"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="14dp">
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/prompt_gender"/>
            <TextView
                android:id="@+id/details_instructor_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_weight="0.7"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="14dp">
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/prompt_address"/>
            <TextView
                android:id="@+id/details_instructor_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_weight="0.7"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="14dp">
            <Button
                android:id="@+id/details_instructor_delete"
                android:layout_width="175dp"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:background="@color/red"
                android:layout_marginHorizontal="14dp"
                android:text="@string/prompt_delete"/>
            <Button
                android:id="@+id/details_instructor_edit"
                android:layout_width="175dp"
                android:layout_marginHorizontal="14dp"
                android:layout_height="62dp"
                android:text="@string/prompt_edit"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>