<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ui.dr.InstructorEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/edit_instructor_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/prompt_first_name"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:singleLine="true" />



        <EditText
            android:id="@+id/edit_instructor_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/prompt_last_name"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:singleLine="true" />


        <EditText
            android:id="@+id/edit_instructor_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/prompt_phone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:singleLine="true"
            tools:ignore="TextFields" />


        <EditText
            android:id="@+id/edit_instructor_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/prompt_address"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:singleLine="true" />


        <Spinner
            android:id="@+id/edit_instructor_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/edit_save_change_instructor"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@drawable/button_gradient"
                android:text="@string/save_changes"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>