<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ui.section.CourseInstructorDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="14dp">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/section_name" />

            <TextView
                android:id="@+id/details_co_in_section_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="start" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="14dp">

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/prompt_section_room" />

            <TextView
                android:id="@+id/details_co_in_section_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="start" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="14dp">
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/course_title"/>
            <TextView
                android:id="@+id/details_co_in_course_title"
                android:layout_width="wrap_content"
                android:gravity="start"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="14dp">
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/course_hours"/>
            <TextView
                android:id="@+id/details_co_in_course_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_weight="0.7"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="14dp">
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/prompt_first_name"/>
            <TextView
                android:id="@+id/details_co_in_instructor_firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_weight="0.7"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="14dp">
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/prompt_last_name"/>
            <TextView
                android:id="@+id/details_co_in_instructor_lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_weight="0.7"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/enrollment_this_course"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@drawable/button_gradient"
                android:text="@string/enrollment_this_course"
                android:textColor="?attr/colorWhite"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>