<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/text_section"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="8dp"
    android:paddingVertical="8dp"
    android:elevation="5dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:paddingVertical="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/student_name" />

            <TextView
                android:id="@+id/enrollment_student_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:paddingVertical="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/enrollment_grade" />

            <TextView
                android:id="@+id/enrollment_grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:layout_marginHorizontal="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/course_title" />

            <TextView
                android:id="@+id/enrollment_course_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/course_hours" />

            <TextView
                android:id="@+id/enrollment_course_hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:layout_marginHorizontal="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/section_name" />

            <TextView
                android:id="@+id/enrollment_section_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:paddingVertical="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/prompt_section_room" />

            <TextView
                android:id="@+id/enrollment_section_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
